# Audio-Recomendation

./: .gitignore  2026-07-09-library-management-design.md  AGENTS.md  AI_RULES.md  DOCKER_FIX_REPORT.md  HEALTH_CHECK.md  Project_Report_Week2.docx  Project_Report_Week3.docx  README.md  STATE.md  docker-compose.yml  docker-info.txt  fix_genres_log.txt  logs.txt  usecase_diagram.puml  ПРОЧИТАЙ_МЕНЕ.txt
backend/: .env.example  Dockerfile  alembic.ini  check_fk.py  fix_genres_ai.py  fix_stuck_tracks.py  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_add_file_hash_and_analysis_status.py  003_add_perceptual_fingerprint.py  004_add_cascade_and_recommendation_indices.py  005_add_array_columns.py  006_add_algorithm_events.py  007_add_ab_config.py  008_add_updated_at_triggers.py  009_add_algorithm_time_index.py  010_hybrid_source_model.py  011_spotify_auth_model.py  012_playlist_import_jobs.py  (+2 more)
backend/app/: database.py  limiter.py  main.py
backend/tests/: conftest.py  test_ab_stats.py  test_admin.py  test_analyze_routes.py  test_audio_analyzer_mock.py  test_audio_runner.py  test_audio_utils.py  test_audio_utils_more.py  test_auth_routes.py  test_auth_utils.py  test_cache.py  test_file_validation.py  test_genre_classifier.py  test_hashing.py  test_migrations.py  test_ml_recommender.py  test_more_routes.py  test_music_routes.py  test_perceptual_dedup.py  test_recommend_routes.py  test_spotify.py  test_spotify_auth.py  test_spotify_auth_routes.py  test_storage.py  test_stream.py
docs/: API.md  (+7 more)
(+104 files in other folders)
